# sales-enablement-picth

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CLI_COMMANDS.md  PUSH_INSTRUCTIONS.md  README.md  gemini3_generated.json  gemini3_generated.pptx  gemini3_processed.json  pitch.json  pitch_comprehensive.json  pitch_gemini.history.json  pitch_gemini.json  pitch_gemini.pptx  presentation.pptx  processed.json  processed.pitch.CEO.markdown  processed_geimini.json  processed_pitch_gemini.json  pyproject.toml  requirements.txt  secure-time.json  securetime-pitch.json  securetime-pitch.pptx  test_extraction.json  test_pitch_fixed.json  test_pitch_gemini.json
src/: __init__.py  main.py
src/acquisition/: __init__.py  browser.py  engine.py  fingerprint.py  site_analyzer.py  spa_handler.py
src/acquisition/extractors/: __init__.py  (+4 more)
src/generation/: __init__.py  generator.py  templates.py  visual_matcher.py
src/llm/: __init__.py  client.py  config.py  parser.py  prompts.py
src/models/: __init__.py  config.py  content.py  pitch.py  processed.py
src/processing/: __init__.py  batch.py  cache.py  chunker.py  processor.py  visuals.py
src/refinement/: __init__.py  engine.py  history.py  models.py  prompts.py
tests/: __init__.py
tests/test_acquisition/: __init__.py  test_engine.py
tests/test_generation/: __init__.py  test_generator.py  test_pitch_models.py  test_templates.py
tests/test_llm/: test_client.py  test_config.py  test_parser.py  test_prompts.py
tests/test_processing/: __init__.py  test_batch.py  test_cache.py  test_chunker.py  test_processor.py
(+9 files in other folders)
